Wireframe do Workshop - versão mobile

--- a/Workshop HTML/index.html
+++ b/Workshop HTML/index.html
@@ -48,7 +48,8 @@ Importante lembrar que a tag <link> não deve ser confundida com a tag <a>, usad
                 <p>Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit, sed do eiusmod temporr<br> incididunt ut labore et dolore magna<br> aliquat enim ad minim.</p>
             </section>
             <section class="article-container__section-subtitle">
-                <h3>proposta</h3>
+                <h3 id="section-subtitle-proposta">proposta</h3> 
+                <!-- Comente algo -->
                 <p>Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit, sed do eiusmod temporr<br> incididunt ut labore et dolore magna<br> aliquat enim ad minim.</p>
             </section>
         </article>
